# home-iot

./: .gitignore  CLAUDE.md  README.md
agent/: .env.example  README.md  pyproject.toml
agent/config/: entity_contract.yaml  home_knowledge.example.yaml  home_layout.example.yaml  open_questions.example.yaml  semantic_entities.yaml
agent/scripts/: import_google_takeout.py  import_samsung_health.py  import_sleep_as_android.py  refresh_analytics.py  weekly_review.py
agent/src/home_iot/: __init__.py  agent.py  analytics.py  config.py  context.py  events.py  ha.py  llm.py  main.py  rules.py  semantic.py  semantic_runtime.py  tools.py
agent/src/home_iot/bridges/: __init__.py  activitywatch.py  qingping.py
agent/src/home_iot/importers/: samsung_health.py  sleep_as_android.py
agent/src/home_iot/routines/: __init__.py  night.py
agent/tests/: test_agent_semantic_integration.py  test_context_builder.py  test_night_routine.py  test_semantic_events.py  test_semantic_runtime.py
analyst-chat/: app.py  requirements.txt
personal-home-os/: Cargo.toml  README.md
personal-home-os/config/: entity_contract.yaml  runtime.yaml.example  semantic_entities.yaml
personal-home-os/data/context/: now.json
personal-home-os/data/events/: 2026-05-14.jsonl
personal-home-os/src/: action.rs  briefing.rs  context.rs  lib.rs  main.rs  server.rs
personal-home-os/src/ha/: types.rs
personal-home-os/src/routines/: mod.rs  night.rs
personal-home-os/src/semantic/: event.rs  ledger.rs  mapper.rs  mod.rs
personal-home-os/tests/: mvp_pipeline_test.rs  semantic_mapper_test.rs
(+41 files in other folders)
