[project]
name = "home-iot-agent"
version = "0.1.0"
description = "Hybrid rule + LLM agent layer for home-iot hub"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "aiomqtt>=2.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "influxdb-client>=1.45",
    "pyyaml>=6.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
]

[project.scripts]
home-iot-agent = "home_iot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_iot"]
